<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_DBSN"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin5"
        android:scaleType="centerInside"
        android:src="@drawable/dbsn"
        app:layout_constraintBottom_toTopOf="@id/guideline11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="@string/description_d"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/descriptionB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline11" />

    <TextView
        android:id="@+id/descriptionB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="@string/description_b"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/descriptionS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionD" />

    <TextView
        android:id="@+id/descriptionS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="@string/description_s"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/descriptionN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionB" />

    <TextView
        android:id="@+id/descriptionN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:text="@string/description_n"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionS" />

    <Button
        android:id="@+id/button_back_to_main"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_calculator"
        android:textSize="14sp"
        android:layout_marginBottom="@dimen/margin5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionN" />
</androidx.constraintlayout.widget.ConstraintLayout>